--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,7 +12,7 @@
     --header-border-color: #ececec;
     --network-border-color: #eeeeee;
     --hero-bag-color: #c4c4c4;
-    --client-border-color: #afb1b8;
+    --client-border-color: rgba(175, 177, 184, 1);
     --bagcolor-link-network: rgba(255, 255, 255, 0.1);
     --duration: 250ms;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
