--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   --header-border-color: #ececec;
   --network-border-color: #eeeeee;
   --hero-bag-color: #c4c4c4;
-  --client-border-color: #afb1b8;
+  --client-border-color: rgba(175, 177, 184, 1);
   --bagcolor-link-network: rgba(255, 255, 255, 0.1);
   --duration: 250ms;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -87,10 +87,27 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .header-icon-web {
@@ -134,8 +151,8 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--secondary-color);
   transform: translate(-50%, -50%);
   padding: 40px;
@@ -165,6 +182,13 @@ body {
 
 .modal-icon {
   fill: var(--main-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .header {
@@ -268,24 +292,29 @@ body {
 }
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-color: var(--hero-bag-color);
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bagimage.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile-hero.jpg");
   background-size: cover;
   background-repeat: repeat;
   background-position: center;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile-hero@2x.jpg");
+  }
+}
+
 .hero-container {
-  width: 696px;
+  max-width: 450px;
 }
 
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -300,8 +329,6 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--secondary-color);
   cursor: pointer;
@@ -314,22 +341,44 @@ body {
   background-color: var(--hover-button-backcolor);
 }
 
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet-hero.jpg");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet-hero@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-color: var(--hero-bag-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop-hero.jpg");
+  }
+  .hero-container {
+    max-width: 696px;
+  }
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop-hero@2x.jpg");
+  }
+}
+
 .plus {
-  padding-top: 94px;
-  padding-bottom: 47px;
+  padding-top: 60px;
+  padding-bottom: 30px;
   background-color: var(--secondary-color);
-}
-
-.plus-menu {
-  display: flex;
-}
-
-.plus-menu__list {
-  width: 270px;
-}
-
-.plus-menu__list:not(:last-child) {
-  margin-right: 30px;
 }
 
 .plus-menu__box {
@@ -337,8 +386,11 @@ body {
   align-items: center;
   justify-content: center;
   background-color: var(--our-team-color);
-  width: 270px;
   height: 120px;
+  margin-bottom: 30px;
+}
+
+.plus-menu__list:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -354,6 +406,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .plus-menu__text {
@@ -364,74 +417,119 @@ body {
   color: var(--p-text-color);
 }
 
-.works {
-  padding-top: 47px;
-  background-color: var(--secondary-color);
+@media screen and (min-width: 768px) {
+  .plus-menu {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+    margin-right: -30px;
+  }
+  .plus-menu__list {
+    width: 354px;
+  }
+  .plus-menu__list:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .plus-menu__list:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+  .plus-menu__title {
+    text-align: unset;
+  }
 }
 
-.work-container {
-  padding-top: 47px;
-  padding-bottom: 94px;
+@media screen and (min-width: 1200px) {
+  .plus {
+    padding-top: 94px;
+    padding-bottom: 47px;
+  }
+  .plus-menu__list {
+    width: 270px;
+  }
+  .plus-menu__list:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
 }
 
-.work-menu {
-  display: flex;
-  align-items: center;
+@media screen and (max-width: 1199px) {
+  .works {
+    display: none;
+  }
 }
 
-.work-menu__list {
-  position: relative;
-  width: 370px;
-}
-
-.work-menu__list:not(:last-child) {
-  margin-right: 30px;
-}
-
-.work-menu__box {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 370px;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondary-color);
-}
-
-.work-menu__title {
-  padding: 27px;
+@media screen and (min-width: 1200px) {
+  .works {
+    display: block;
+  }
+  .works {
+    padding-top: 47px;
+    background-color: var(--secondary-color);
+  }
+  .work-container {
+    padding-top: 47px;
+    padding-bottom: 94px;
+  }
+  .work-menu {
+    display: flex;
+    align-items: center;
+  }
+  .work-menu__list {
+    position: relative;
+    width: 370px;
+  }
+  .work-menu__list:not(:last-child) {
+    margin-right: 30px;
+  }
+  .work-menu__box {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 370px;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--secondary-color);
+  }
+  .work-menu__title {
+    padding: 27px;
+  }
 }
 
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 30px;
+  padding-bottom: 60px;
   background-color: var(--our-team-color);
 }
 
-.team-list {
-  display: flex;
+.second-title-work {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
 }
 
 .team-item {
-  margin-right: 30px;
   background-color: var(--secondary-color);
   text-align: center;
-  width: 270px;
+  max-width: 450px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
 .team-item:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .team-description {
-  padding: 30px 32px;
+  padding: 30px 122px 24px;
 }
 
 .third-title {
@@ -455,24 +553,82 @@ body {
   height: 44px;
 }
 
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
+  .team-item {
+    background-color: var(--secondary-color);
+    text-align: center;
+    width: 354px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .team-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+  .team-description {
+    padding: 30px 74px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .second-title-work {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
+  .team-item {
+    margin-bottom: unset;
+    margin-right: 30px;
+    width: 270px;
+  }
+  .team-item:last-child {
+    margin-right: 0;
+  }
+  .team-description {
+    padding: 30px 32px;
+  }
+}
+
 .clients {
   background-color: var(--secondary-color);
 }
 
 .clients-container {
-  margin-top: 94px;
-  margin-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   text-align: center;
 }
 
 .client-menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .client-list {
-  width: 170px;
+  flex-basis: calc((100% - 2 * 30px) / 2);
   height: 92px;
+  margin-bottom: 30px;
+}
+
+.client-list:not(:nth-child(2n)) {
+  margin-right: 30px;
+}
+
+.client-list:nth-last-child(-n + 2) {
+  margin-bottom: 0px;
 }
 
 .client-link {
@@ -498,6 +654,39 @@ body {
 .client-link:hover .icon-main-color,
 .client-link:focus .icon-main-color {
   fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .client-list {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+  .client-list:not(:nth-child(2n)) {
+    margin-right: unset;
+  }
+  .client-list:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .client-list:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .client-menu {
+    flex-wrap: unset;
+    justify-content: space-between;
+  }
+  .client-list {
+    flex-basis: calc((100% - 6 * 30px) / 6);
+    margin-bottom: unset;
+  }
+  .client-list:not(:nth-child(3n)) {
+    margin-right: 0;
+  }
 }
 
 .main-portfolio {
@@ -626,8 +815,12 @@ body {
   padding-bottom: 60px;
 }
 
+.footer-container {
+  text-align: center;
+}
+
 .footer-list-menu:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .footer-link {
@@ -668,12 +861,14 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-left: 70px;
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .network-contacts {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .network-list {
@@ -694,28 +889,24 @@ body {
   fill: var(--secondary-color);
 }
 
-.united-footer {
-  display: flex;
-  align-items: baseline;
-}
-
 .sign-for-mailing {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--secondary-color);
-  margin-left: auto;
+  text-align: center;
 }
 
 .mailing {
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
 
 .footer-input {
-  width: 358px;
+  width: 100%;
   height: 50px;
+  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -734,9 +925,9 @@ body {
 
 .footer-button {
   position: relative;
+  align-self: center;
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.88;
@@ -871,8 +1062,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--p-text-color);
   margin-top: 10px;
@@ -901,6 +1092,13 @@ body {
   background-origin: padding-box;
   border: none;
   outline: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form-checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form-label-link {
