--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -2,8 +2,8 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     background-color: var(--secondary-color);
     transform: translate(-50%, -50%);
     padding: 40px;
@@ -33,4 +33,11 @@
 
 .modal-icon {
     fill: var(--main-color);
+}
+
+@media screen and (min-width: 1200px) {
+    .modal {
+        width: 528px;
+        height: 581px;
+    }
 }
