--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -3,19 +3,29 @@
 }
 
 .clients-container {
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     text-align: center;
 }
 
 .client-menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .client-list {
-    width: 170px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
     height: 92px;
+    margin-bottom: 30px;
+
+    &:not(:nth-child(2n)) {
+        margin-right: 30px;
+    }
+
+    &:nth-last-child(-n + 2) {
+        margin-bottom: 0px;
+    }
 }
 
 .client-link {
@@ -43,5 +53,44 @@
     .client-link:hover &,
     .client-link:focus & {
         fill: var(--accent-color);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .client-list {
+        flex-basis: calc((100% - 3 * 30px) / 3);
+
+        &:not(:nth-child(2n)) {
+            margin-right: unset;
+        }
+
+        &:not(:nth-child(3n)) {
+            margin-right: 30px;
+        }
+
+        &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .clients-container {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+
+    .client-menu {
+        flex-wrap: unset;
+        justify-content: space-between;
+    }
+
+    .client-list {
+        flex-basis: calc((100% - 6 * 30px) / 6);
+        margin-bottom: unset;
+
+        &:not(:nth-child(3n)) {
+            margin-right: 0;
+        }
     }
 }
