--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,13 @@
     padding-bottom: 60px;
 }
 
+.footer-container {
+    text-align: center;
+}
+
 .footer-list-menu {
     &:not(:last-child) {
-        margin-bottom: 9px;
+        margin-bottom: 8px;
     }
 }
 
@@ -50,12 +54,14 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-left: 70px;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .network-contacts {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .network-list {
@@ -76,28 +82,24 @@
     fill: var(--secondary-color);
 }
 
-.united-footer {
-    display: flex;
-    align-items: baseline;
-}
-
 .sign-for-mailing {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--secondary-color);
-    margin-left: auto;
+    text-align: center;
 }
 
 .mailing {
     display: flex;
-    align-items: center;
+    flex-direction: column;
 }
 
 .footer-input {
-    width: 358px;
+    width: 100%;
     height: 50px;
+    margin-bottom: 20px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -116,9 +118,9 @@
 
 .footer-button {
     position: relative;
+    align-self: center;
     width: 200px;
     height: 50px;
-    margin-left: 12px;
     font-weight: bold;
     font-size: 16px;
     line-height: 1.88;
@@ -148,3 +150,154 @@
     top: 13px;
     right: 28px;
 }
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
+
+// .footer-list-menu {
+//     &:not(:last-child) {
+//         margin-bottom: 9px;
+//     }
+// }
+
+// .footer-link {
+//     font-weight: 400;
+//     font-size: 14px;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//     color: var(--footer-link-color);
+
+//     transition: color var(--duration) var(--timing-function);
+
+//     &:hover,
+//     &:focus {
+//         color: var(--accent-color);
+//     }
+// }
+
+// .location {
+//     color: var(--secondary-color);
+// }
+
+// .logo-footer {
+//     display: block;
+//     margin-bottom: 20px;
+//     font-family: var(--secondary-font);
+//     font-weight: 700;
+//     font-size: 26px;
+//     line-height: 1.19;
+//     letter-spacing: 0.03em;
+//     color: var(--secondary-color);
+// }
+
+// .footer-list {
+//     font-style: normal;
+// }
+
+// .our-networks {
+//     color: var(--secondary-color);
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     margin-left: 70px;
+// }
+
+// .network-contacts {
+//     display: flex;
+//     justify-content: space-between;
+// }
+
+// .network-list {
+//     width: 44px;
+//     height: 44px;
+//     margin-right: 10px;
+
+//     &:last-child {
+//         margin-right: 0;
+//     }
+// }
+
+// .link-network {
+//     background-color: var(--bagcolor-link-network);
+// }
+
+// .icon-footer-color {
+//     fill: var(--secondary-color);
+// }
+
+// .united-footer {
+//     display: flex;
+//     align-items: baseline;
+// }
+
+// .sign-for-mailing {
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     color: var(--secondary-color);
+//     margin-left: auto;
+// }
+
+// .mailing {
+//     display: flex;
+//     align-items: center;
+// }
+
+// .footer-input {
+//     width: 358px;
+//     height: 50px;
+//     background-color: transparent;
+//     border: 1px solid rgba(255, 255, 255, 0.3);
+//     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//     border-radius: 4px;
+//     color: var(--secondary-color);
+//     padding-left: 16px;
+
+//     &::placeholder {
+//         padding: 15px 0px;
+//         font-size: 16px;
+//         line-height: 1.25;
+//         letter-spacing: 0.03em;
+//         color: var(--footer-link-color);
+//     }
+// }
+
+// .footer-button {
+//     position: relative;
+//     width: 200px;
+//     height: 50px;
+//     margin-left: 12px;
+//     font-weight: bold;
+//     font-size: 16px;
+//     line-height: 1.88;
+//     letter-spacing: 0.06em;
+//     color: var(--secondary-color);
+//     background-color: var(--accent-color);
+//     border-radius: 4px;
+//     cursor: pointer;
+//     padding-left: 29px;
+//     padding-right: 62px;
+//     padding-top: 10px;
+//     padding-bottom: 10px;
+//     border: none;
+
+//     transition: background-color var(--duration) var(--timing-function),
+//         box-shadow var(--duration) var(--timing-function);
+
+//     &:hover,
+//     &:focus {
+//         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//         background-color: var(--hover-button-backcolor);
+//     }
+// }
+
+// .footer-input-logo {
+//     position: absolute;
+//     top: 13px;
+//     right: 28px;
+// }
