--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,26 +1,37 @@
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: var(--hero-bag-color);
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
     background-image: linear-gradient(
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url('../images/bagimage.jpg');
+        url('../images/mobile-hero.jpg');
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+    screen and (min-resolution: 192dpi) and (min-width: 320px),
+    screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    .hero {
+        background-image: linear-gradient(
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url('../images/mobile-hero@2x.jpg');
+    }
+}
+
 .hero-container {
-    width: 696px;
+    max-width: 450px;
 }
 
 .hero-title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.61;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -35,8 +46,6 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    align-items: center;
-    text-align: center;
     letter-spacing: 0.06em;
     color: var(--secondary-color);
     cursor: pointer;
@@ -49,5 +58,61 @@
     &:focus {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         background-color: var(--hover-button-backcolor);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url('../images/tablet-hero.jpg');
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+    screen and (min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url('../images/tablet-hero@2x.jpg');
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero {
+        padding-top: 200px;
+        padding-bottom: 200px;
+        background-color: var(--hero-bag-color);
+        background-image: linear-gradient(
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url('../images/desktop-hero.jpg');
+    }
+
+    .hero-container {
+        max-width: 696px;
+    }
+
+    .hero-title {
+        font-size: 44px;
+        line-height: 1.36;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    screen and (min-resolution: 192dpi) and (min-width: 1200px),
+    screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url('../images/desktop-hero@2x.jpg');
     }
 }
