--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -52,7 +52,83 @@
     background-color: var(--accent-color);
 }
 
+.network-link {
+    display: block;
+    transition: box-shadow var(--duration) var(--timing-function);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+            0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+}
+
+.network-union {
+    padding: 20px 24px;
+}
+
+.network-item {
+    flex-basis: calc((100% - 1 * 30px) / 1);
+    border: 1px solid var(--network-border-color);
+    display: block;
+    margin-bottom: 30px;
+
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+
+.portfolio-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--main-color);
+    margin-bottom: 4px;
+}
+
+.portfolio-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--p-text-color);
+}
+
+.network-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--secondary-color);
+    background-color: var(--bagcolor-overlay);
+
+    transform: translateY(101%);
+    transition: transform var(--duration) var(--timing-function);
+
+    .network-link:hover &,
+    .network-link:focus & {
+        transform: translateY(0%);
+    }
+}
+
 @media screen and (min-width: 768px) {
+    .network {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
     .button-class {
         flex-wrap: unset;
         justify-content: center;
@@ -62,6 +138,22 @@
 
     .list-button {
         margin-bottom: unset;
+    }
+
+    .network-item {
+        flex-basis: calc((100% - 2 * 30px) / 2);
+        border: 1px solid var(--network-border-color);
+        margin-bottom: 30px;
+
+        &:not(:nth-child(2n)) {
+            margin-right: 30px;
+        }
+    }
+    .network-union {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 21px;
+        padding-right: 0;
     }
 }
 
@@ -74,84 +166,25 @@
     .button-class {
         margin-bottom: 50px;
     }
+
+    .network-item {
+        flex-basis: calc((100% - 60px) / 3);
+        border: 1px solid var(--network-border-color);
+
+        &:not(:nth-child(2n)) {
+            margin-right: unset;
+        }
+
+        &:not(:nth-child(3n)) {
+            margin-right: 30px;
+        }
+
+        &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }
+    }
+
+    .network-union {
+        padding: 20px 24px;
+    }
 }
-
-// .network {
-//     display: flex;
-//     align-items: center;
-//     flex-wrap: wrap;
-// }
-
-// .network-link {
-//     display: block;
-//     transition: box-shadow var(--duration) var(--timing-function);
-
-//     &:hover,
-//     &:focus {
-//         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-//             0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-//     }
-// }
-
-// .network-union {
-//     padding: 20px 24px;
-// }
-
-// .network-item {
-//     flex-basis: calc((100% - 60px) / 3);
-//     border: 1px solid var(--network-border-color);
-//     display: block;
-//     margin-bottom: 30px;
-
-//     &:not(:nth-child(3n)) {
-//         margin-right: 30px;
-//     }
-
-//     &:nth-last-child(-n + 3) {
-//         margin-bottom: 0;
-//     }
-// }
-
-// .portfolio-title {
-//     font-weight: 700;
-//     font-size: 18px;
-//     line-height: 2;
-//     letter-spacing: 0.06em;
-//     color: var(--main-color);
-//     margin-bottom: 4px;
-// }
-
-// .portfolio-text {
-//     font-weight: 400;
-//     font-size: 16px;
-//     line-height: 1.88;
-//     letter-spacing: 0.03em;
-//     color: var(--p-text-color);
-// }
-
-// .network-overlay {
-//     position: relative;
-//     overflow: hidden;
-// }
-
-// .overlay {
-//     position: absolute;
-//     width: 100%;
-//     height: 100%;
-//     top: 0;
-//     left: 0;
-//     padding: 63px 24px;
-//     font-size: 18px;
-//     line-height: 1.56;
-//     letter-spacing: 0.03em;
-//     color: var(--secondary-color);
-//     background-color: var(--bagcolor-overlay);
-
-//     transform: translateY(101%);
-//     transition: transform var(--duration) var(--timing-function);
-
-//     .network-link:hover &,
-//     .network-link:focus & {
-//         transform: translateY(0%);
-//     }
-// }
