--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,7 +9,7 @@
     --our-team-color: #f5f4fa;
     --footer-link-color: rgba(255, 255, 255, 0.6);
     --button-color: #f5f4fa;
-    --header-border-color: #ececec;
+    --header-border-color: rgba(236, 236, 236, 1);
     --network-border-color: #eeeeee;
     --hero-bag-color: #c4c4c4;
     --client-border-color: rgba(175, 177, 184, 1);
