--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   --our-team-color: #f5f4fa;
   --footer-link-color: rgba(255, 255, 255, 0.6);
   --button-color: #f5f4fa;
-  --header-border-color: #ececec;
+  --header-border-color: rgba(236, 236, 236, 1);
   --network-border-color: #eeeeee;
   --hero-bag-color: #c4c4c4;
   --client-border-color: rgba(175, 177, 184, 1);
@@ -150,7 +150,7 @@ body {
 .modal {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 54%;
   width: 450px;
   height: 609px;
   background-color: var(--secondary-color);
@@ -196,99 +196,272 @@ body {
   background-color: var(--secondary-color);
 }
 
-.header-container,
-.navigation {
+.header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+
+.list-item {
+  display: none;
+}
+
+.list-item-two {
+  display: none;
+}
+
+.burger-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+
+.burger-btn-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 700;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--secondary-color);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.header-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+
+.close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.nav-list-point {
+  margin-bottom: 34px;
+}
+
+.nav-list-point:last-child {
+  margin-bottom: 0;
+}
+
+.nav-list-link {
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+  transition: color var(--duration) var(--timing-function);
+}
+
+.nav-list-link:hover, .nav-list-link:focus {
+  color: #2196f3;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.contacts-link {
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var --p-text-color;
+  transition: color var(--duration) var(--timing-function), font-size var(--duration) var(--timing-function);
+}
+
+.contacts-link:hover, .contacts-link:focus {
+  color: #2196f3;
+  font-size: 34px;
+}
+
+.mobile-social {
+  display: flex;
+}
+
+.social-item:not(:last-child)::after {
+  content: '';
+  width: 0;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.social-link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 
 .logo-header {
   display: block;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
-  margin-right: 92px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .header-icon-studio {
   color: var(--main-color);
 }
 
-.list-item-link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--main-color);
-  transition: color var(--duration) var(--timing-function);
+@media screen and (min-width: 768px) {
+  .header-container,
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .logo-header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    margin-right: 88px;
+  }
+  .list-item {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+  .list-item-two {
+    display: block;
+  }
+  .item:not(:last-child) {
+    margin-right: 48px;
+  }
+  .item-two {
+    margin-right: 0;
+  }
+  .item-two:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .list-item-link,
+  .list-item-link-two {
+    display: flex;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--main-color);
+    transition: color var(--duration) var(--timing-function);
+  }
+  .list-item-link:hover, .list-item-link:focus,
+  .list-item-link-two:hover,
+  .list-item-link-two:focus {
+    color: var(--accent-color);
+  }
+  .list-item-link-two {
+    padding-top: unset;
+    padding-bottom: unset;
+  }
+  .list-item-link-current {
+    position: relative;
+    color: var(--accent-color);
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .list-item-link-current::after {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 4px;
+    background: var(--accent-color);
+    border-radius: 2px;
+  }
+  .info {
+    margin-left: auto;
+  }
+  .logo-icon {
+    margin-right: 10px;
+  }
+  .list-item-link:hover .logo-icon,
+  .list-item-link:focus .logo-icon {
+    fill: var(--accent-color);
+  }
+  .list-item-link-two:hover .logo-icon,
+  .list-item-link-two:focus .logo-icon {
+    fill: var(--accent-color);
+  }
+  .icon-header-color {
+    fill: var(--p-text-color);
+    transition: fill var(--duration) var(--timing-function);
+  }
+  .current-color {
+    color: var(--p-text-color);
+    text-decoration: none;
+  }
+  .pasivecolor {
+    color: var(--p-text-color);
+  }
 }
 
-.list-item-link:hover, .list-item-link:focus {
-  color: var(--accent-color);
-}
-
-.list-item-link-current {
-  position: relative;
-  color: var(--accent-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.list-item-link-current::after {
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 4px;
-  background: var(--accent-color);
-  border-radius: 2px;
-}
-
-.list-item {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.item:not(:last-child) {
-  margin-right: 48px;
-}
-
-.info {
-  margin-left: auto;
-}
-
-.logo-icon {
-  margin-right: 10px;
-}
-
-.list-item-link:hover .logo-icon,
-.list-item-link:focus .logo-icon {
-  fill: var(--accent-color);
-}
-
-.icon-header-color {
-  fill: var(--p-text-color);
-  transition: fill var(--duration) var(--timing-function);
-}
-
-.current-color {
-  color: var(--p-text-color);
-  text-decoration: none;
-}
-
-.pasivecolor {
-  color: var(--p-text-color);
+@media screen and (min-width: 1200px) {
+  .logo-header {
+    margin-right: 92px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  .list-item-two {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+  .item-two:not(:last-child) {
+    margin-right: 48px;
+    margin-bottom: unset;
+  }
+  .item-two .list-item-link-two {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .hero {
