--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,9 @@ body {
   .pasivecolor {
     color: var(--p-text-color);
   }
+  .burger-btn {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1200px) {
