--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,23 +1,23 @@
 :root {
-    --main-font: 'Roboto', sans-serif;
-    --secondary-font: 'Raleway', sans-serif;
-    --main-color: #212121;
-    --secondary-color: #ffffff;
-    --accent-color: #2196f3;
-    --p-text-color: #757575;
-    --footer-color: #2f303a;
-    --our-team-color: #f5f4fa;
-    --footer-link-color: rgba(255, 255, 255, 0.6);
-    --button-color: #f5f4fa;
-    --header-border-color: rgba(236, 236, 236, 1);
-    --network-border-color: #eeeeee;
-    --hero-bag-color: #c4c4c4;
-    --client-border-color: rgba(175, 177, 184, 1);
-    --bagcolor-link-network: rgba(255, 255, 255, 0.1);
-    --duration: 250ms;
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --bagcolor-overlay: rgba(33, 150, 243, 0.9);
-    --bagcolor-backdrop: rgba(0, 0, 0, 0.2);
-    --buttonmodal-border-color: 1px solid #0000001a;
-    --hover-button-backcolor: #188ce8;
+  --main-font: 'Roboto', sans-serif;
+  --secondary-font: 'Raleway', sans-serif;
+  --main-color: #212121;
+  --secondary-color: #ffffff;
+  --accent-color: #2196f3;
+  --p-text-color: rgba(117, 117, 117, 1);
+  --footer-color: #2f303a;
+  --our-team-color: #f5f4fa;
+  --footer-link-color: rgba(255, 255, 255, 0.6);
+  --button-color: #f5f4fa;
+  --header-border-color: rgba(236, 236, 236, 1);
+  --network-border-color: #eeeeee;
+  --hero-bag-color: #c4c4c4;
+  --client-border-color: rgba(175, 177, 184, 1);
+  --bagcolor-link-network: rgba(255, 255, 255, 0.1);
+  --duration: 250ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --bagcolor-overlay: rgba(33, 150, 243, 0.9);
+  --bagcolor-backdrop: rgba(0, 0, 0, 0.2);
+  --buttonmodal-border-color: 1px solid #0000001a;
+  --hover-button-backcolor: #188ce8;
 }
