--- a/css/main.css
+++ b/css/main.css
@@ -157,12 +157,6 @@ body {
   padding: 40px;
 }
 
-@media screen and (max-width: 480px) {
-  .modal {
-    width: 96%;
-  }
-}
-
 .close-btn {
   position: absolute;
   top: 8px;
@@ -187,6 +181,21 @@ body {
 
 .modal-icon {
   fill: var(--main-color);
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    width: 96%;
+  }
+  .close-btn {
+    top: 20px;
+  }
+}
+
+@media screen and (max-width: 324px) {
+  .close-btn {
+    top: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -548,7 +557,7 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 767px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -564,7 +573,7 @@ body {
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 767px), screen and (min-resolution: 192dpi) and (min-width: 767px), screen and (min-resolution: 2dppx) and (min-width: 767px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop-hero@2x.jpg");
   }
