--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -3,7 +3,6 @@
   left: 50%;
   top: 50%;
   width: 450px;
-  height: 100vh;
   background-color: var(--secondary-color);
   transform: translate(-50%, -50%);
   padding: 40px;
@@ -39,11 +38,9 @@
   .modal {
     width: 96%;
   }
-}
 
-@media screen and (min-width: 768px) {
-  .modal {
-    height: unset;
+  .close-btn {
+    top: 40px;
   }
 }
 
